discard start(end) time in question response
