# src/swagger.json
@@ -269,19 +269,19 @@
         "name": {
           "type": "string"
         },
-        "start_time": {
-          "type": "string",
-          "format": "datetime"
-        },
-        "end_time": {
-          "type": "string",
-          "format": "datetime"
-        },
         "question_data": {
           "type": "string"
         },
         "match_id": {
           "type": "integer"
+        },
+        "match": {
+          "type": "object",
+          "properties": {
+            "schema": {
+              "$ref": "#/definitions/Match"
+            }
+          }
         }
       }
     },
